--- a/Web.Statu/Views/Manage/CreatePerson.cshtml
+++ b/Web.Statu/Views/Manage/CreatePerson.cshtml
@@ -54,7 +54,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Narozeni, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Narozeni, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Narozeni, new { htmlAttributes = new { @class = "form-control", placeholder = "dd.mm.yyyy" } } )
             @Html.ValidationMessageFor(model => model.Narozeni, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -62,7 +62,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Umrti, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Umrti, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Umrti, new { htmlAttributes = new { @class = "form-control", placeholder = "dd.mm.yyyy" } })
             @Html.ValidationMessageFor(model => model.Umrti, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -78,14 +78,14 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Vytvořit" class="btn btn-primary" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "FindPerson")
+    @Html.ActionLink("Zpět na vyhledávání", "FindPerson")
 </div>
 
 @section Scripts {
