--- a/Web.Statu/Views/Manage/EditPersonNP.cshtml
+++ b/Web.Statu/Views/Manage/EditPersonNP.cshtml
@@ -57,7 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Narozeni, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Narozeni, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Narozeni, new { htmlAttributes = new { @class = "form-control", placeholder = "dd.mm.yyyy" } })
                 @Html.ValidationMessageFor(model => model.Narozeni, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Umrti, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Umrti, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Umrti, new { htmlAttributes = new { @class = "form-control", placeholder = "dd.mm.yyyy" } })
                 @Html.ValidationMessageFor(model => model.Umrti, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -82,15 +82,15 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Uložit" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "FindPerson")
-    @Html.ActionLink("Go to detail", "PersonDetail", new { id = Model.InternalId })
+    @Html.ActionLink("Zpět na vyhledávání", "FindPerson") | 
+    @Html.ActionLink("Detail osoby", "PersonDetail", new { id = Model.InternalId })
 </div>
 
 @section Scripts {
