--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -60,9 +60,18 @@
         </div>
         <div class="col-sm-8 col-md-9">
             @{
+                int[] types = {
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VolenaFunkce,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.PolitickaPracovni,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Politicka,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaJine,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaPracovni,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Osobni,
+                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Jine
+                    };
                 var funkceOsoba = Model.Description(true,
-                       m => m.Type != (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor,
-                       200);
+                       m =>  types.Contains(m.Type),
+                       20);
 
             }
             <div class="row">
