link na priklady

--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<h2>Ukázky možností</h2>
+<h2 id="priklady">Ukázky možností</h2>
 <ul>
     <li>
         <a href="/insolvence/hledat?Q=*">Naposledy změněná řízení</a>
