--- a/Web.Statu/Views/Home/Detail_Child.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child.cshtml
@@ -410,7 +410,7 @@
             {
                 <tr>
                     <td>
-                        Právní rámec smlouvy vzhledem <a href="/ORegistru">k platnosti registru smluv</a>
+                        Právní rámec smlouvy vzhledem <a href="/O-Registru">k platnosti registru smluv</a>
                     </td>
                     <td>
                         @switch (Model.PravniRamec)
